src/test/ui/nll/lub-match.base.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/lub-match.rs:34:13
   |
LL |             s
   |             ^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the lifetime `'a` as defined here
  --> $DIR/lub-match.rs:29:17
   |
LL | pub fn opt_str2<'a>(maybestr: &'a Option<String>) -> &'static str {
   |                 ^^

error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/lub-match.rs:45:13
   |
LL |             s
   |             ^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the lifetime `'a` as defined here
  --> $DIR/lub-match.rs:41:17
   |
LL | pub fn opt_str3<'a>(maybestr: &'a Option<String>) -> &'static str {
   |                 ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0312`.
